internal/xds/translator/testdata/out/xds-ir/address-as-listener-name.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - '*'
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-1/http/*
    routes:
    - match:
        prefix: /
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http-ipv6
  virtualHosts:
  - domains:
    - '*'
    name: envoy-gateway/gateway-1/http-ipv6/*
    routes:
    - match:
        prefix: /
      name: second-route
      route:
        cluster: second-route-dest
        upgradeConfigs:
        - upgradeType: websocket
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/https-http3
  virtualHosts:
  - domains:
    - '*'
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: https
    name: envoy-gateway/gateway-1/https-http3/*
    routes:
    - match:
        prefix: /
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: httproute-1
              namespace: default
      name: httproute/default/httproute-1/rule/0/match/0/*
      responseHeadersToAdd:
      - append: true
        header:
          key: alt-svc
          value: h3=":443"; ma=86400
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
